style: reduce calculation

--- a/packages/vant/src/coupon-list/index.less
+++ b/packages/vant/src/coupon-list/index.less
@@ -61,7 +61,7 @@
     -webkit-overflow-scrolling: touch;
 
     &--with-bottom {
-      padding-bottom: calc(var(--van-padding-md) + 50px);
+      padding-bottom: 50px;
     }
   }
 
