--- a/packages/vant/src/submit-bar/index.less
+++ b/packages/vant/src/submit-bar/index.less
@@ -40,7 +40,7 @@
   }
 
   &__tip-icon {
-    min-width: calc(var(--van-submit-bar-tip-icon-size) * 1.5);
+    margin-right: var(--van-padding-base);
     font-size: var(--van-submit-bar-tip-icon-size);
     vertical-align: middle;
   }
