feat: bug fix 920

--- a/src/divider/index.less
+++ b/src/divider/index.less
@@ -17,7 +17,8 @@
     flex: 1;
     box-sizing: border-box;
     height: 1px;
-    border-color: inherit;
+    // border-color: inherit;
+    border-color: #000;
     border-style: inherit;
     border-width: @border-width-base 0 0;
   }
