--- a/src/cascaderbak/index.less
+++ b/src/cascaderbak/index.less
@@ -1,6 +1,6 @@
 @import '../style/var';
 
-.van-cascader {
+.van-cascaderbak {
   &__header {
     display: flex;
     align-items: center;
@@ -13,12 +13,6 @@
     font-weight: @font-weight-bold;
     font-size: @cascader-title-font-size;
     line-height: @cascader-title-line-height;
-  }
-
-  &__wrapppcascader {
-    .van-cascader__close-icon {
-      display: none;
-    }
   }
 
   &__close-icon {
