修复图标的 line-height 样式

--- a/src/cell/index.less
+++ b/src/cell/index.less
@@ -53,8 +53,8 @@
     }
   }
 
-  &__left-icon,
-  &__right-icon {
+  &__left-icon[class],
+  &__right-icon[class] {
     height: @cell-line-height;
     font-size: @cell-icon-size;
     line-height: @cell-line-height;
