--- a/src/style/var.less
+++ b/src/style/var.less
@@ -171,14 +171,14 @@
 @calendar-day-height: 64px;
 @calendar-day-font-size: @font-size-lg;
 @calendar-range-edge-color: @white;
-@calendar-range-edge-background-color: @red;
-@calendar-range-middle-color: @red;
+@calendar-range-edge-background-color: @blue;
+@calendar-range-middle-color: @blue;
 @calendar-range-middle-background-opacity: 0.1;
 @calendar-selected-day-size: 54px;
 @calendar-selected-day-color: @white;
 @calendar-info-font-size: @font-size-xs;
 @calendar-info-line-height: @line-height-xs;
-@calendar-selected-day-background-color: @red;
+@calendar-selected-day-background-color: @blue;
 @calendar-day-disabled-color: @gray-5;
 @calendar-confirm-button-height: 36px;
 @calendar-confirm-button-margin: 7px 0;
@@ -348,7 +348,7 @@
 @dialog-has-title-message-padding-top: @padding-xs;
 @dialog-button-height: 48px;
 @dialog-round-button-height: 36px;
-@dialog-confirm-button-text-color: @red;
+@dialog-confirm-button-text-color: @blue;
 
 // Divider
 @divider-margin: @padding-md 0;
