--- a/src/stepper/index.less
+++ b/src/stepper/index.less
@@ -69,7 +69,7 @@
     box-sizing: border-box;
     width: @stepper-input-width;
     height: @stepper-input-height;
-    margin: 0 2px;
+    margin: 0 2px !important;
     padding: 0;
     color: @stepper-input-text-color;
     font-size: @stepper-input-font-size;
