--- a/src/style/third.less
+++ b/src/style/third.less
@@ -1,8 +1,10 @@
 @import './var';
 .l-root-h5 {
   width: 100%;
-  height: 100%;
   min-height: 100px;
+}
+div[root-app] .l-root-h5 {
+  height: 100%;
 }
 .h5template-login-wrap {
   height: 100vh;
