--- a/src/sku/index.less
+++ b/src/sku/index.less
@@ -350,6 +350,10 @@
       &::after {
         .hairline-bottom(@cell-border-color, @padding-md, @padding-md);
       }
+
+      &:last-child::after {
+        display: none;
+      }
     }
 
     &__extra-message {
