style: css vars support gradient background color

--- a/packages/vant/src/action-bar-icon/index.less
+++ b/packages/vant/src/action-bar-icon/index.less
@@ -21,7 +21,7 @@
   font-size: var(--van-action-bar-icon-font-size);
   line-height: 1;
   text-align: center;
-  background-color: var(--van-action-bar-icon-background-color);
+  background: var(--van-action-bar-icon-background-color);
   cursor: pointer;
 
   &:active {
