--- a/packages/vant/src/action-bar/index.less
+++ b/packages/vant/src/action-bar/index.less
@@ -14,5 +14,5 @@
   align-items: center;
   box-sizing: content-box;
   height: var(--van-action-bar-height);
-  background-color: var(--van-action-bar-background-color);
+  background: var(--van-action-bar-background-color);
 }
