--- a/packages/vant/src/action-sheet/index.less
+++ b/packages/vant/src/action-sheet/index.less
@@ -45,7 +45,7 @@
     width: 100%;
     padding: 14px var(--van-padding-md);
     font-size: var(--van-action-sheet-item-font-size);
-    background-color: var(--van-action-sheet-item-background);
+    background: var(--van-action-sheet-item-background);
     border: none;
     cursor: pointer;
 
@@ -91,7 +91,7 @@
   &__gap {
     display: block;
     height: var(--van-action-sheet-cancel-padding-top);
-    background-color: var(--van-action-sheet-cancel-padding-color);
+    background: var(--van-action-sheet-cancel-padding-color);
   }
 
   &__header {
