--- a/packages/vant/src/address-edit/index.less
+++ b/packages/vant/src/address-edit/index.less
@@ -36,7 +36,7 @@
 
   &-detail {
     &__search-item {
-      background-color: var(--van-gray-2);
+      background: var(--van-gray-2);
     }
 
     &__keyword {
