--- a/packages/vant/src/badge/index.less
+++ b/packages/vant/src/badge/index.less
@@ -24,7 +24,7 @@
   font-family: var(--van-badge-font-family);
   line-height: 1.2;
   text-align: center;
-  background-color: var(--van-badge-background-color);
+  background: var(--van-badge-background-color);
   border: var(--van-badge-border-width) solid var(--van-white);
   border-radius: var(--van-border-radius-max);
 
@@ -40,7 +40,7 @@
     width: var(--van-badge-dot-size);
     min-width: 0;
     height: var(--van-badge-dot-size);
-    background-color: var(--van-badge-dot-color);
+    background: var(--van-badge-dot-color);
     border-radius: 100%;
   }
 
