--- a/packages/vant/src/calendar/index.less
+++ b/packages/vant/src/calendar/index.less
@@ -32,7 +32,7 @@
   display: flex;
   flex-direction: column;
   height: 100%;
-  background-color: var(--van-calendar-background-color);
+  background: var(--van-calendar-background-color);
 
   &__popup {
     &.van-popup--top,
@@ -132,7 +132,7 @@
     &--multiple-middle,
     &--multiple-selected {
       color: var(--van-calendar-range-edge-color);
-      background-color: var(--van-calendar-range-edge-background-color);
+      background: var(--van-calendar-range-edge-background-color);
     }
 
     &--start {
@@ -194,7 +194,7 @@
     width: var(--van-calendar-selected-day-size);
     height: var(--van-calendar-selected-day-size);
     color: var(--van-calendar-selected-day-color);
-    background-color: var(--van-calendar-selected-day-background-color);
+    background: var(--van-calendar-selected-day-background-color);
     border-radius: var(--van-border-radius-md);
   }
 
