--- a/packages/vant/src/card/index.less
+++ b/packages/vant/src/card/index.less
@@ -25,7 +25,7 @@
   padding: var(--van-card-padding);
   color: var(--van-card-text-color);
   font-size: var(--van-card-font-size);
-  background-color: var(--van-card-background-color);
+  background: var(--van-card-background-color);
 
   &:not(:first-child) {
     margin-top: var(--van-padding-xs);
