--- a/packages/vant/src/cell-group/index.less
+++ b/packages/vant/src/cell-group/index.less
@@ -12,7 +12,7 @@
 }
 
 .van-cell-group {
-  background-color: var(--van-cell-group-background-color);
+  background: var(--van-cell-group-background-color);
 
   &--inset {
     margin: var(--van-cell-group-inset-padding);
