--- a/packages/vant/src/cell/index.less
+++ b/packages/vant/src/cell/index.less
@@ -33,7 +33,7 @@
   color: var(--van-cell-text-color);
   font-size: var(--van-cell-font-size);
   line-height: var(--van-cell-line-height);
-  background-color: var(--van-cell-background-color);
+  background: var(--van-cell-background-color);
 
   &::after {
     .hairline-bottom(var(--van-cell-border-color), var(--van-padding-md), var(--van-padding-md));
