--- a/packages/vant/src/collapse-item/index.less
+++ b/packages/vant/src/collapse-item/index.less
@@ -70,6 +70,6 @@
     color: var(--van-collapse-item-content-text-color);
     font-size: var(--van-collapse-item-content-font-size);
     line-height: var(--van-collapse-item-content-line-height);
-    background-color: var(--van-collapse-item-content-background-color);
+    background: var(--van-collapse-item-content-background-color);
   }
 }
