--- a/packages/vant/src/coupon-list/index.less
+++ b/packages/vant/src/coupon-list/index.less
@@ -14,7 +14,7 @@
 .van-coupon-list {
   position: relative;
   height: 100%;
-  background-color: var(--van-coupon-list-background-color);
+  background: var(--van-coupon-list-background-color);
 
   &__field {
     padding: var(--van-coupon-list-field-padding);
