--- a/packages/vant/src/coupon/index.less
+++ b/packages/vant/src/coupon/index.less
@@ -23,7 +23,7 @@
 .van-coupon {
   margin: var(--van-coupon-margin);
   overflow: hidden;
-  background-color: var(--van-coupon-background-color);
+  background: var(--van-coupon-background-color);
   border-radius: var(--van-coupon-border-radius);
   box-shadow: var(--van-coupon-box-shadow);
 
