--- a/packages/vant/src/dialog/index.less
+++ b/packages/vant/src/dialog/index.less
@@ -28,7 +28,7 @@
   width: var(--van-dialog-width);
   overflow: hidden;
   font-size: var(--van-dialog-font-size);
-  background-color: var(--van-dialog-background-color);
+  background: var(--van-dialog-background-color);
   border-radius: var(--van-dialog-border-radius);
   backface-visibility: hidden; // avoid blurry text after scale animation
   transition: var(--van-dialog-transition);
