--- a/packages/vant/src/dropdown-menu/index.less
+++ b/packages/vant/src/dropdown-menu/index.less
@@ -22,7 +22,7 @@
     position: relative;
     display: flex;
     height: var(--van-dropdown-menu-height);
-    background-color: var(--van-dropdown-menu-background-color);
+    background: var(--van-dropdown-menu-background-color);
     box-shadow: var(--van-dropdown-menu-box-shadow);
 
     &--opened {
