--- a/packages/vant/src/grid-item/index.less
+++ b/packages/vant/src/grid-item/index.less
@@ -39,7 +39,7 @@
     box-sizing: border-box;
     height: 100%;
     padding: var(--van-grid-item-content-padding);
-    background-color: var(--van-grid-item-content-background-color);
+    background: var(--van-grid-item-content-background-color);
 
     &::after {
       z-index: 1;
