--- a/packages/vant/src/image-preview/index.less
+++ b/packages/vant/src/image-preview/index.less
@@ -81,7 +81,7 @@
   }
 
   &__overlay {
-    background-color: var(--van-image-preview-overlay-background-color);
+    background: var(--van-image-preview-overlay-background-color);
   }
 
   &__close-icon {
