--- a/packages/vant/src/image/index.less
+++ b/packages/vant/src/image/index.less
@@ -42,7 +42,7 @@
     justify-content: center;
     color: var(--van-image-placeholder-text-color);
     font-size: var(--van-image-placeholder-font-size);
-    background-color: var(--van-image-placeholder-background-color);
+    background: var(--van-image-placeholder-background-color);
   }
 
   &__loading-icon {
