--- a/packages/vant/src/index-anchor/index.less
+++ b/packages/vant/src/index-anchor/index.less
@@ -20,7 +20,7 @@
   font-weight: var(--van-index-anchor-font-weight);
   font-size: var(--van-index-anchor-font-size);
   line-height: var(--van-index-anchor-line-height);
-  background-color: var(--van-index-anchor-background-color);
+  background: var(--van-index-anchor-background-color);
 
   &--sticky {
     position: fixed;
@@ -28,6 +28,6 @@
     right: 0;
     left: 0;
     color: var(--van-index-anchor-sticky-text-color);
-    background-color: var(--van-index-anchor-sticky-background-color);
+    background: var(--van-index-anchor-sticky-background-color);
   }
 }
