--- a/packages/vant/src/nav-bar/index.less
+++ b/packages/vant/src/nav-bar/index.less
@@ -16,7 +16,7 @@
   z-index: var(--van-nav-bar-z-index);
   line-height: var(--van-line-height-lg);
   text-align: center;
-  background-color: var(--van-nav-bar-background-color);
+  background: var(--van-nav-bar-background-color);
   user-select: none;
 
   &--fixed {
