--- a/packages/vant/src/notice-bar/index.less
+++ b/packages/vant/src/notice-bar/index.less
@@ -21,7 +21,7 @@
   color: var(--van-notice-bar-text-color);
   font-size: var(--van-notice-bar-font-size);
   line-height: var(--van-notice-bar-line-height);
-  background-color: var(--van-notice-bar-background-color);
+  background: var(--van-notice-bar-background-color);
 
   &__left-icon,
   &__right-icon {
