--- a/packages/vant/src/notify/index.less
+++ b/packages/vant/src/notify/index.less
@@ -27,18 +27,18 @@
   word-wrap: break-word;
 
   &--primary {
-    background-color: var(--van-notify-primary-background-color);
+    background: var(--van-notify-primary-background-color);
   }
 
   &--success {
-    background-color: var(--van-notify-success-background-color);
+    background: var(--van-notify-success-background-color);
   }
 
   &--danger {
-    background-color: var(--van-notify-danger-background-color);
+    background: var(--van-notify-danger-background-color);
   }
 
   &--warning {
-    background-color: var(--van-notify-warning-background-color);
+    background: var(--van-notify-warning-background-color);
   }
 }
