--- a/packages/vant/src/number-keyboard/index.less
+++ b/packages/vant/src/number-keyboard/index.less
@@ -25,7 +25,7 @@
   z-index: var(--van-number-keyboard-z-index);
   width: 100%;
   padding-bottom: 22px;
-  background-color: var(--van-number-keyboard-background-color);
+  background: var(--van-number-keyboard-background-color);
   user-select: none;
 
   &--with-title {
@@ -99,7 +99,7 @@
   height: var(--van-number-keyboard-key-height);
   font-size: var(--van-number-keyboard-key-font-size);
   line-height: 1.5;
-  background-color: var(--van-number-keyboard-key-background-color);
+  background: var(--van-number-keyboard-key-background-color);
   border-radius: var(--van-border-radius-lg);
   cursor: pointer;
 
@@ -125,7 +125,7 @@
 
   &--blue {
     color: var(--van-number-keyboard-button-text-color);
-    background-color: var(--van-number-keyboard-button-background-color);
+    background: var(--van-number-keyboard-button-background-color);
 
     &.van-key--active {
       opacity: var(--van-active-opacity);
