--- a/packages/vant/src/pagination/index.less
+++ b/packages/vant/src/pagination/index.less
@@ -29,7 +29,7 @@
     min-width: var(--van-pagination-item-width);
     height: var(--van-pagination-height);
     color: var(--van-pagination-item-default-color);
-    background-color: var(--van-pagination-background-color);
+    background: var(--van-pagination-background-color);
     cursor: pointer;
     user-select: none;
 
