--- a/packages/vant/src/password-input/index.less
+++ b/packages/vant/src/password-input/index.less
@@ -58,7 +58,7 @@
       color: var(--van-password-input-text-color);
       font-size: var(--van-password-input-font-size);
       line-height: 1.2;
-      background-color: var(--van-password-input-background-color);
+      background: var(--van-password-input-background-color);
     }
 
     i {
@@ -67,7 +67,7 @@
       left: 50%;
       width: var(--van-password-input-dot-size);
       height: var(--van-password-input-dot-size);
-      background-color: var(--van-password-input-dot-color);
+      background: var(--van-password-input-dot-color);
       border-radius: 100%;
       transform: translate(-50%, -50%);
       visibility: hidden;
@@ -80,7 +80,7 @@
     left: 50%;
     width: var(--van-password-input-cursor-width);
     height: var(--van-password-input-cursor-height);
-    background-color: var(--van-password-input-cursor-color);
+    background: var(--van-password-input-cursor-color);
     transform: translate(-50%, -50%);
     animation: var(--van-password-input-cursor-animation-duration)
       van-cursor-flicker infinite;
