--- a/packages/vant/src/picker/index.less
+++ b/packages/vant/src/picker/index.less
@@ -19,7 +19,7 @@
 
 .van-picker {
   position: relative;
-  background-color: var(--van-picker-background-color);
+  background: var(--van-picker-background-color);
   user-select: none;
 
   &__toolbar {
@@ -76,7 +76,7 @@
     align-items: center;
     justify-content: center;
     color: var(--van-picker-loading-icon-color);
-    background-color: var(--van-picker-loading-mask-color);
+    background: var(--van-picker-loading-mask-color);
   }
 
   &__frame {
