--- a/packages/vant/src/popover/index.less
+++ b/packages/vant/src/popover/index.less
@@ -214,7 +214,7 @@
     color: var(--van-popover-light-text-color);
 
     .van-popover__content {
-      background-color: var(--van-popover-light-background-color);
+      background: var(--van-popover-light-background-color);
       box-shadow: 0 2px 12px rgba(50, 50, 51, 0.12);
     }
 
@@ -242,7 +242,7 @@
     color: var(--van-popover-dark-text-color);
 
     .van-popover__content {
-      background-color: var(--van-popover-dark-background-color);
+      background: var(--van-popover-dark-background-color);
     }
 
     .van-popover__arrow {
