--- a/packages/vant/src/popup/index.less
+++ b/packages/vant/src/popup/index.less
@@ -20,7 +20,7 @@
     position: fixed;
     max-height: 100%;
     overflow-y: auto;
-    background-color: var(--van-popup-background-color);
+    background: var(--van-popup-background-color);
     transition: var(--van-popup-transition);
     -webkit-overflow-scrolling: touch;
 
