--- a/packages/vant/src/progress/index.less
+++ b/packages/vant/src/progress/index.less
@@ -40,7 +40,7 @@
     line-height: var(--van-progress-pivot-line-height);
     text-align: center;
     word-break: keep-all;
-    background-color: var(--van-progress-pivot-background-color);
+    background: var(--van-progress-pivot-background-color);
     border-radius: 1em;
     transition: all var(--van-animation-duration-base)
       var(--van-animation-timing-function-enter);
