--- a/packages/vant/src/search/index.less
+++ b/packages/vant/src/search/index.less
@@ -19,13 +19,13 @@
   align-items: center;
   box-sizing: border-box;
   padding: var(--van-search-padding);
-  background-color: var(--van-search-background-color);
+  background: var(--van-search-background-color);
 
   &__content {
     display: flex;
     flex: 1;
     padding-left: var(--van-padding-sm);
-    background-color: var(--van-search-content-background-color);
+    background: var(--van-search-content-background-color);
     border-radius: var(--van-border-radius-sm);
 
     &--round {
