--- a/packages/vant/src/sidebar-item/index.less
+++ b/packages/vant/src/sidebar-item/index.less
@@ -25,7 +25,7 @@
   color: var(--van-sidebar-text-color);
   font-size: var(--van-sidebar-font-size);
   line-height: var(--van-sidebar-line-height);
-  background-color: var(--van-sidebar-background-color);
+  background: var(--van-sidebar-background-color);
   cursor: pointer;
   user-select: none;
 
