--- a/packages/vant/src/skeleton/index.less
+++ b/packages/vant/src/skeleton/index.less
@@ -19,7 +19,7 @@
     width: var(--van-skeleton-avatar-size);
     height: var(--van-skeleton-avatar-size);
     margin-right: var(--van-padding-md);
-    background-color: var(--van-skeleton-avatar-background-color);
+    background: var(--van-skeleton-avatar-background-color);
 
     &--round {
       border-radius: var(--van-border-radius-max);
@@ -37,7 +37,7 @@
   &__row,
   &__title {
     height: var(--van-skeleton-row-height);
-    background-color: var(--van-skeleton-row-background-color);
+    background: var(--van-skeleton-row-background-color);
   }
 
   &__title {
