--- a/packages/vant/src/slider/index.less
+++ b/packages/vant/src/slider/index.less
@@ -16,7 +16,7 @@
   position: relative;
   width: 100%;
   height: var(--van-slider-bar-height);
-  background-color: var(--van-slider-inactive-background-color);
+  background: var(--van-slider-inactive-background-color);
   border-radius: var(--van-border-radius-max);
   cursor: pointer;
 
@@ -34,7 +34,7 @@
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: var(--van-slider-active-background-color);
+    background: var(--van-slider-active-background-color);
     border-radius: inherit;
     transition: all var(--van-animation-duration-fast);
   }
@@ -42,7 +42,7 @@
   &__button {
     width: var(--van-slider-button-width);
     height: var(--van-slider-button-height);
-    background-color: var(--van-slider-button-background-color);
+    background: var(--van-slider-button-background-color);
     border-radius: var(--van-slider-button-border-radius);
     box-shadow: var(--van-slider-button-box-shadow);
 
