--- a/packages/vant/src/submit-bar/index.less
+++ b/packages/vant/src/submit-bar/index.less
@@ -28,7 +28,7 @@
   left: 0;
   z-index: var(--van-submit-bar-z-index);
   width: 100%;
-  background-color: var(--van-submit-bar-background-color);
+  background: var(--van-submit-bar-background-color);
   user-select: none;
 
   &__tip {
@@ -36,7 +36,7 @@
     color: var(--van-submit-bar-tip-color);
     font-size: var(--van-submit-bar-tip-font-size);
     line-height: var(--van-submit-bar-tip-line-height);
-    background-color: var(--van-submit-bar-tip-background-color);
+    background: var(--van-submit-bar-tip-background-color);
   }
 
   &__tip-icon {
