--- a/packages/vant/src/tabbar/index.less
+++ b/packages/vant/src/tabbar/index.less
@@ -12,7 +12,7 @@
   box-sizing: content-box;
   width: 100%;
   height: var(--van-tabbar-height);
-  background-color: var(--van-tabbar-background-color);
+  background: var(--van-tabbar-background-color);
 
   &--fixed {
     position: fixed;
