--- a/packages/vant/src/tabs/index.less
+++ b/packages/vant/src/tabs/index.less
@@ -84,7 +84,7 @@
   &__nav {
     position: relative;
     display: flex;
-    background-color: var(--van-tabs-nav-background-color);
+    background: var(--van-tabs-nav-background-color);
     user-select: none;
 
     &--line {
@@ -133,7 +133,7 @@
     z-index: 1;
     width: var(--van-tabs-bottom-bar-width);
     height: var(--van-tabs-bottom-bar-height);
-    background-color: var(--van-tabs-bottom-bar-color);
+    background: var(--van-tabs-bottom-bar-color);
     border-radius: var(--van-tabs-bottom-bar-height);
   }
 
