--- a/packages/vant/src/tag/index.less
+++ b/packages/vant/src/tag/index.less
@@ -30,7 +30,7 @@
   border-radius: var(--van-tag-border-radius);
 
   &--default {
-    background-color: var(--van-tag-default-color);
+    background: var(--van-tag-default-color);
 
     &.van-tag--plain {
       color: var(--van-tag-default-color);
@@ -38,7 +38,7 @@
   }
 
   &--danger {
-    background-color: var(--van-tag-danger-color);
+    background: var(--van-tag-danger-color);
 
     &.van-tag--plain {
       color: var(--van-tag-danger-color);
@@ -46,7 +46,7 @@
   }
 
   &--primary {
-    background-color: var(--van-tag-primary-color);
+    background: var(--van-tag-primary-color);
 
     &.van-tag--plain {
       color: var(--van-tag-primary-color);
@@ -54,7 +54,7 @@
   }
 
   &--success {
-    background-color: var(--van-tag-success-color);
+    background: var(--van-tag-success-color);
 
     &.van-tag--plain {
       color: var(--van-tag-success-color);
@@ -62,7 +62,7 @@
   }
 
   &--warning {
-    background-color: var(--van-tag-warning-color);
+    background: var(--van-tag-warning-color);
 
     &.van-tag--plain {
       color: var(--van-tag-warning-color);
@@ -70,7 +70,7 @@
   }
 
   &--plain {
-    background-color: var(--van-tag-plain-background-color);
+    background: var(--van-tag-plain-background-color);
     border-color: currentColor;
 
     &::before {
