--- a/packages/vant/src/toast/index.less
+++ b/packages/vant/src/toast/index.less
@@ -40,7 +40,7 @@
   text-align: center;
   // https://github.com/youzan/vant/issues/8959
   word-break: break-all;
-  background-color: var(--van-toast-background-color);
+  background: var(--van-toast-background-color);
   border-radius: var(--van-toast-border-radius);
 
   &--unclickable {
