--- a/packages/vant/src/tree-select/index.less
+++ b/packages/vant/src/tree-select/index.less
@@ -20,7 +20,7 @@
   &__nav {
     flex: 1;
     overflow-y: auto;
-    background-color: var(--van-tree-select-nav-background-color);
+    background: var(--van-tree-select-nav-background-color);
     -webkit-overflow-scrolling: touch;
 
     &-item {
@@ -31,7 +31,7 @@
   &__content {
     flex: 2;
     overflow-y: auto;
-    background-color: var(--van-tree-select-content-background-color);
+    background: var(--van-tree-select-content-background-color);
     -webkit-overflow-scrolling: touch;
   }
 
