--- a/packages/vant/src/uploader/index.less
+++ b/packages/vant/src/uploader/index.less
@@ -70,7 +70,7 @@
     width: var(--van-uploader-size);
     height: var(--van-uploader-size);
     margin: 0 var(--van-padding-xs) var(--van-padding-xs) 0;
-    background-color: var(--van-uploader-upload-background-color);
+    background: var(--van-uploader-upload-background-color);
 
     &:active {
       background-color: var(--van-uploader-upload-active-color);
@@ -110,7 +110,7 @@
       right: 0;
       width: var(--van-uploader-delete-icon-size);
       height: var(--van-uploader-delete-icon-size);
-      background-color: var(--van-uploader-delete-background-color);
+      background: var(--van-uploader-delete-background-color);
       border-radius: 0 0 0 12px;
 
       &-icon {
@@ -143,7 +143,7 @@
     align-items: center;
     justify-content: center;
     color: var(--van-uploader-mask-text-color);
-    background-color: var(--van-uploader-mask-background-color);
+    background: var(--van-uploader-mask-background-color);
 
     &-icon {
       font-size: var(--van-uploader-mask-icon-size);
@@ -170,7 +170,7 @@
     justify-content: center;
     width: var(--van-uploader-size);
     height: var(--van-uploader-size);
-    background-color: var(--van-uploader-file-background-color);
+    background: var(--van-uploader-file-background-color);
 
     &-icon {
       color: var(--van-uploader-file-icon-color);
