--- a/packages/vant/src/overlay/index.less
+++ b/packages/vant/src/overlay/index.less
@@ -12,5 +12,5 @@
   z-index: var(--van-overlay-z-index);
   width: 100%;
   height: 100%;
-  background-color: var(--van-overlay-background-color);
+  background: var(--van-overlay-background-color);
 }
