--- a/packages/vant/src/stepper/index.less
+++ b/packages/vant/src/stepper/index.less
@@ -31,7 +31,7 @@
     padding: 0;
     color: var(--van-stepper-button-icon-color);
     vertical-align: middle;
-    background-color: var(--van-stepper-background-color);
+    background: var(--van-stepper-background-color);
     border: 0;
     cursor: pointer;
 
@@ -95,7 +95,7 @@
     line-height: var(--van-stepper-input-line-height);
     text-align: center;
     vertical-align: middle;
-    background-color: var(--van-stepper-background-color);
+    background: var(--van-stepper-background-color);
     border: 0;
     border-width: 1px 0;
     border-radius: 0;
@@ -137,7 +137,7 @@
 
     .van-stepper__plus {
       color: var(--van-white);
-      background-color: var(--van-stepper-button-round-theme-color);
+      background: var(--van-stepper-button-round-theme-color);
     }
 
     .van-stepper__minus {
