style(Badge): style issues when the dot option is turned on (#9686)

--- a/packages/vant/src/badge/index.less
+++ b/packages/vant/src/badge/index.less
@@ -42,6 +42,8 @@
     height: var(--van-badge-dot-size);
     background: var(--van-badge-dot-color);
     border-radius: 100%;
+    border: none;
+    padding: 0;
   }
 
   &__wrapper {
