--- a/packages/vant/src/progress/var.less
+++ b/packages/vant/src/progress/var.less
@@ -2,6 +2,7 @@
 
 @progress-height: 4px;
 @progress-color: var(--van-primary-color);
+@progress-inactive-color: var(--van-gray-5);
 @progress-background-color: var(--van-gray-3);
 @progress-pivot-padding: 0 5px;
 @progress-pivot-text-color: var(--van-white);
