feat: swipe add designcontrl and del auto

--- a/src/style/var.less
+++ b/src/style/var.less
@@ -768,6 +768,7 @@
 
 // Swipe
 @swipe-indicator-size: 6px;
+@swipe-indicator-size-new: 12px;
 @swipe-indicator-margin: @padding-sm;
 @swipe-indicator-active-opacity: 1;
 @swipe-indicator-inactive-opacity: 0.3;
