--- a/src/swipe/index.less
+++ b/src/swipe/index.less
@@ -36,8 +36,8 @@
   }
 
   &__indicator {
-    width: @swipe-indicator-size;
-    height: @swipe-indicator-size;
+    width: @swipe-indicator-size-new;
+    height: @swipe-indicator-size-new;
     background-color: @swipe-indicator-inactive-background-color;
     border-radius: 100%;
     opacity: @swipe-indicator-inactive-opacity;
