--- a/src/style/third.less
+++ b/src/style/third.less
@@ -21,10 +21,14 @@ div[root-app] .l-root-h5 {
     margin-bottom: 14.93333vw;
   }
   .login-form {
+    .cus-login-button {
+      width: 100%;
+      margin-left: 0;
+    }
   }
   .login-cell {
     padding: 0;
-    line-height: 10.4vw;
+    line-height: 12.8vw;
     background: #f6f6f6;
     border-radius: 1.06667vw;
     margin-bottom: 4.26667vw;
@@ -70,8 +74,9 @@ div[root-app] .l-root-h5 {
 
 .h5template-navi {
   height: 100%;
-  padding: 4.26667vw;
   .navi-head {
+    padding-left: 4.26667vw;
+    padding-right: 4.26667vw;
     height: 11.73333vw;
     .nvai-top-image {
       width: 6.4vw;
@@ -114,6 +119,13 @@ div[root-app] .l-root-h5 {
       color: #333333;
     }
   }
+
+  .user-middle {
+    .van-cell {
+      padding-right: 4.26667vw;
+    }
+  }
+
   .navi-item-icon {
     display: block;
     width: 6.4vw;
