--- a/packages/vant/src/style/mixins/hairline.less
+++ b/packages/vant/src/style/mixins/hairline.less
@@ -7,7 +7,7 @@
   pointer-events: none;
 }
 
-.hairline(@color: @border-color) {
+.hairline(@color: var(--van-border-color)) {
   .hairline-common();
 
   top: -50%;
@@ -18,7 +18,7 @@
   transform: scale(0.5);
 }
 
-.hairline-top(@color: @border-color, @left: 0, @right: 0) {
+.hairline-top(@color: var(--van-border-color), @left: 0, @right: 0) {
   .hairline-common();
 
   top: 0;
@@ -28,7 +28,7 @@
   transform: scaleY(0.5);
 }
 
-.hairline-bottom(@color: @border-color, @left: 0, @right: 0) {
+.hairline-bottom(@color: var(--van-border-color), @left: 0, @right: 0) {
   .hairline-common();
 
   right: @right;
