style(Card): adjust background color to gray-1

--- a/packages/vant/src/card/var.less
+++ b/packages/vant/src/card/var.less
@@ -3,7 +3,7 @@
 @card-padding: var(--van-padding-xs) var(--van-padding-md);
 @card-font-size: var(--van-font-size-sm);
 @card-text-color: var(--van-text-color);
-@card-background-color: var(--van-background-color-light);
+@card-background-color: var(--van-gray-1);
 @card-thumb-size: 88px;
 @card-thumb-border-radius: var(--van-border-radius-lg);
 @card-title-line-height: 16px;
