chore: adjust some css vars

--- a/packages/vant/src/badge/index.less
+++ b/packages/vant/src/badge/index.less
@@ -25,7 +25,7 @@
   line-height: 1.2;
   text-align: center;
   background: var(--van-badge-background-color);
-  border: var(--van-badge-border-width) solid var(--van-white);
+  border: var(--van-badge-border-width) solid var(--van-background-color-light);
   border-radius: var(--van-border-radius-max);
 
   &--fixed {
