--- a/packages/vant/src/step/index.less
+++ b/packages/vant/src/step/index.less
@@ -66,7 +66,7 @@
       left: calc(var(--van-padding-xs) * -1);
       z-index: 1;
       padding: 0 var(--van-padding-xs);
-      background-color: var(--van-white);
+      background-color: var(--van-background-color-light);
       transform: translateY(-50%);
     }
 
