feat: add --van-text-color-secondary css var

--- a/packages/vant/src/card/var.less
+++ b/packages/vant/src/card/var.less
@@ -10,8 +10,8 @@
 @card-desc-color: var(--van-gray-7);
 @card-desc-line-height: var(--van-line-height-md);
 @card-price-color: var(--van-gray-8);
-@card-origin-price-color: var(--van-gray-6);
-@card-num-color: var(--van-gray-6);
+@card-origin-price-color: var(--van-text-color-secondary);
+@card-num-color: var(--van-text-color-secondary);
 @card-origin-price-font-size: var(--van-font-size-xs);
 @card-price-font-size: var(--van-font-size-sm);
 @card-price-integer-font-size: var(--van-font-size-lg);
