--- a/packages/vant/src/cascader/var.less
+++ b/packages/vant/src/cascader/var.less
@@ -13,4 +13,4 @@
 @cascader-options-height: 384px;
 @cascader-option-disabled-color: var(--van-gray-5);
 @cascader-tab-color: var(--van-text-color);
-@cascader-unselected-tab-color: var(--van-gray-6);
+@cascader-unselected-tab-color: var(--van-text-color-secondary);
