--- a/packages/vant/src/coupon-list/var.less
+++ b/packages/vant/src/coupon-list/var.less
@@ -5,6 +5,6 @@
 @coupon-list-exchange-button-height: 32px;
 @coupon-list-close-button-height: 40px;
 @coupon-list-empty-image-size: 200px;
-@coupon-list-empty-tip-color: var(--van-gray-6);
+@coupon-list-empty-tip-color: var(--van-text-color-secondary);
 @coupon-list-empty-tip-font-size: var(--van-font-size-md);
 @coupon-list-empty-tip-line-height: var(--van-line-height-md);
