--- a/packages/vant/src/popover/var.less
+++ b/packages/vant/src/popover/var.less
@@ -12,4 +12,4 @@
 @popover-light-action-disabled-text-color: var(--van-gray-5);
 @popover-dark-text-color: var(--van-white);
 @popover-dark-background-color: #4a4a4a;
-@popover-dark-action-disabled-text-color: var(--van-gray-6);
+@popover-dark-action-disabled-text-color: var(--van-text-color-secondary);
