--- a/packages/vant/src/pull-refresh/var.less
+++ b/packages/vant/src/pull-refresh/var.less
@@ -2,5 +2,5 @@
 
 @pull-refresh-head-height: 50px;
 @pull-refresh-head-font-size: var(--van-font-size-md);
-@pull-refresh-head-text-color: var(--van-gray-6);
+@pull-refresh-head-text-color: var(--van-text-color-secondary);
 @pull-refresh-loading-icon-size: 16px;
