--- a/packages/vant/src/share-sheet/var.less
+++ b/packages/vant/src/share-sheet/var.less
@@ -5,7 +5,7 @@
 @share-sheet-title-color: var(--van-text-color);
 @share-sheet-title-font-size: var(--van-font-size-md);
 @share-sheet-title-line-height: var(--van-line-height-md);
-@share-sheet-description-color: var(--van-gray-6);
+@share-sheet-description-color: var(--van-text-color-secondary);
 @share-sheet-description-font-size: var(--van-font-size-sm);
 @share-sheet-description-line-height: 16px;
 @share-sheet-icon-size: 48px;
