--- a/packages/vant/src/style/var.less
+++ b/packages/vant/src/style/var.less
@@ -26,6 +26,7 @@
 @danger-color: var(--van-red);
 @warning-color: var(--van-orange);
 @text-color: var(--van-gray-8);
+@text-color-secondary: var(--van-gray-6);
 @active-color: var(--van-gray-2);
 @active-opacity: 0.7;
 @disabled-opacity: 0.5;
