--- a/packages/vant/src/coupon/var.less
+++ b/packages/vant/src/coupon/var.less
@@ -12,7 +12,7 @@
 @coupon-amount-font-size: 30px;
 @coupon-currency-font-size: 40%;
 @coupon-name-font-size: var(--van-font-size-md);
-@coupon-disabled-text-color: var(--van-gray-6);
+@coupon-disabled-text-color: var(--van-text-color-secondary);
 @coupon-description-padding: var(--van-padding-xs) var(--van-padding-md);
 @coupon-description-border-color: var(--van-border-color);
 @coupon-corner-checkbox-icon-color: var(--van-danger-color);
