--- a/packages/vant/src/divider/var.less
+++ b/packages/vant/src/divider/var.less
@@ -1,7 +1,7 @@
 @import '../style/var.less';
 
 @divider-margin: var(--van-padding-md) 0;
-@divider-text-color: var(--van-gray-6);
+@divider-text-color: var(--van-text-color-secondary);
 @divider-font-size: var(--van-font-size-md);
 @divider-line-height: 24px;
 @divider-border-color: var(--van-border-color);
