--- a/packages/vant/src/loading/var.less
+++ b/packages/vant/src/loading/var.less
@@ -1,6 +1,6 @@
 @import '../style/var.less';
 
-@loading-text-color: var(--van-gray-6);
+@loading-text-color: var(--van-text-color-secondary);
 @loading-text-font-size: var(--van-font-size-md);
 @loading-spinner-color: var(--van-gray-5);
 @loading-spinner-size: 30px;
