--- a/packages/vant/src/address-list/var.less
+++ b/packages/vant/src/address-list/var.less
@@ -1,7 +1,7 @@
 @import '../style/var.less';
 
 @address-list-padding: var(--van-padding-sm) var(--van-padding-sm) 80px;
-@address-list-disabled-text-color: var(--van-gray-6);
+@address-list-disabled-text-color: var(--van-text-color-secondary);
 @address-list-disabled-text-padding: calc(var(--van-padding-base) * 5) 0
   var(--van-padding-md);
 @address-list-disabled-text-font-size: var(--van-font-size-md);
