feat(Coupon): add --van-coupon-content-text-color css var

--- a/packages/vant/src/coupon/index.less
+++ b/packages/vant/src/coupon/index.less
@@ -5,6 +5,7 @@
   --van-coupon-margin: @coupon-margin;
   --van-coupon-content-height: @coupon-content-height;
   --van-coupon-content-padding: @coupon-content-padding;
+  --van-coupon-content-text-color: @coupon-content-text-color;
   --van-coupon-background-color: @coupon-background-color;
   --van-coupon-active-background-color: @coupon-active-background-color;
   --van-coupon-border-radius: @coupon-border-radius;
@@ -37,7 +38,7 @@
     box-sizing: border-box;
     min-height: var(--van-coupon-content-height);
     padding: var(--van-coupon-content-padding);
-    color: var(--van-gray-8);
+    color: var(--van-text-color);
   }
 
   &__head {
