--- a/packages/vant/src/coupon/var.less
+++ b/packages/vant/src/coupon/var.less
@@ -3,6 +3,7 @@
 @coupon-margin: 0 var(--van-padding-sm) var(--van-padding-sm);
 @coupon-content-height: 84px;
 @coupon-content-padding: 14px 0;
+@coupon-content-text-color: var(--van-text-color);
 @coupon-background-color: var(--van-background-color-light);
 @coupon-active-background-color: var(--van-active-color);
 @coupon-border-radius: var(--van-border-radius-lg);
