--- a/packages/vant/src/coupon/index.less
+++ b/packages/vant/src/coupon/index.less
@@ -38,7 +38,7 @@
     box-sizing: border-box;
     min-height: var(--van-coupon-content-height);
     padding: var(--van-coupon-content-padding);
-    color: var(--van-text-color);
+    color: var(--van-coupon-content-text-color);
   }
 
   &__head {
